syntax = "proto3";

package proto;

import "define.proto";

option go_package = "./;proto";

enum ForwardType {
    FORWARD_LOCAL = 0;
    FORWARD_TO_ALL = 1;
    FORWARD_TO_ALL_EXCEPT_CUR = 2;
    FORWARD_TO_HOST = 3;
    FORWARD_TO_ALL_GUEST = 4;
    FORWARD_TO_PEER = 5;
    FORWARD_TO_PEERS = 6;
    FORWARD_ONLY_SERVER = 7;
    FORWARD_TO_ALL_EXIST_EXCEPT_CUR = 8;
}

enum HitColliderType {
    HIT_COLLIDER_INVALID = 0;
    HIT_COLLIDER_HIT_BOX = 1;
    HIT_COLLIDER_WET_HIT_BOX = 2;
    HIT_COLLIDER_HEAD_BOX = 3;
}

enum CombatTypeArgument {
    COMBAT_NONE = 0;
    COMBAT_EVT_BEING_HIT = 1;
    COMBAT_ANIMATOR_STATE_CHANGED = 2;
    COMBAT_FACE_TO_DIR = 3;
    COMBAT_SET_ATTACK_TARGET = 4;
    COMBAT_RUSH_MOVE = 5;
    COMBAT_ANIMATOR_PARAMETER_CHANGED = 6;
    ENTITY_MOVE = 7;
    SYNC_ENTITY_POSITION = 8;
    COMBAT_STEER_MOTION_INFO = 9;
    COMBAT_FORCE_SET_POS_INFO = 10;
    COMBAT_COMPENSATE_POS_DIFF = 11;
    COMBAT_MONSTER_DO_BLINK = 12;
    COMBAT_FIXED_RUSH_MOVE = 13;
    COMBAT_SYNC_TRANSFORM = 14;
    COMBAT_LIGHT_CORE_MOVE = 15;
    COMBAT_BEING_HEALED_NTF = 16;
    COMBAT_SKILL_ANCHOR_POSITION_NTF = 17;
    COMBAT_GRAPPLING_HOOK_MOVE = 18;
}

message HitCollision {
    HitColliderType hit_collider_type = 8;
    Vector hit_point = 7;
    float attackee_hit_force_angle = 2;
    Vector hit_dir = 13;
    float attackee_hit_entity_angle = 15;
    int32 hit_box_index = 4;
}

message AttackHitEffectResult {
    float hit_halt_time_scale = 8;
    uint32 original_hit_eff_level = 12;
    float air_strength = 15;
    uint32 hit_eff_level = 2;
    float hit_halt_time = 13;
    float retreat_strength = 7;
}

message AbilityIdentifier {
    uint32 modifier_owner_id = 2;
    uint32 instanced_modifier_id = 9;
    uint32 instanced_ability_id = 10;
    bool is_serverbuff_modifier = 6;
    uint32 ability_caster_id = 15;
    int32 local_id = 3;
}

message AttackResult {
    bool is_resist_text = 1858;
    uint32 create_count_sync_to_server = 1011;
    uint32 amplify_reaction_type = 2005;
    uint32 endure_break = 7;
    uint32 element_type = 5;
    float element_durability_attenuation = 425;
    uint32 defense_id = 15;
    uint32 attack_timestamp_ms = 1188;
    uint32 bullet_fly_time_ms = 91;
    bool is_crit = 13;
    float element_amplify_rate = 900;
    uint32 attack_count = 1564;
    uint32 critical_rand = 1664;
    uint32 hit_pos_type = 2;
    string anim_event_id = 4;
    AttackHitEffectResult hit_eff_result = 8;
    float damage_shield = 1202;
    float endure_delta = 430;
    Vector resolved_dir = 1;
    float damage = 6;
    uint32 addhurt_reaction_type = 1887;
    uint32 hashed_anim_event_id = 278;
    bool use_gadget_damage_action = 1418;
    int32 hit_retreat_angle_compat = 9;
    AbilityIdentifier ability_identifier = 14;
    uint32 attacker_id = 11;
    bool mute_element_hurt = 1530;
    uint32 target_type = 1366;
    HitCollision hit_collision = 10;
    uint32 gadget_damage_action_idx = 1110;
}

message EvtBeingHitInfo {
    uint32 peer_id = 6;
    AttackResult attack_result = 7;
    uint32 frame_num = 4;
}

message EvtHittingOtherInfo {
    AttackResult attack_result = 2;
    uint32 peer_id = 8;
}

message EvtBeingHitNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 372;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    ForwardType forward_type = 6;
    EvtBeingHitInfo being_hit_info = 3;
}

message EvtAnimatorParameterInfo {
    uint32 entity_id = 4;
    bool is_server_cache = 5;
    AnimatorParameterValueInfo value = 7;
    int32 name_id = 15;
}

message EvtAnimatorParameterNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 398;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    EvtAnimatorParameterInfo animator_param_info = 12;
    ForwardType forward_type = 14;
}

message AbilityArgument {
    oneof arg {
        uint32 int_arg = 5;
        float float_arg = 15;
        string str_arg = 11;
    }
}

message HostPlayerNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 312;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 host_peer_id = 13;
    uint32 host_uid = 10;
}

message EvtDoSkillSuccNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 335;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 caster_id = 13;
    ForwardType forward_type = 10;
    Vector forward = 15;
    uint32 skill_id = 7;
}

message EvtCreateGadgetNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 307;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    bool is_async_load = 8;
    uint32 camp_type = 5;
    bool sight_group_with_owner = 10;
    repeated uint32 target_entity_id_list = 889;
    ForwardType forward_type = 12;
    uint32 entity_id = 2;
    uint32 target_entity_id = 3;
    uint32 camp_id = 15;
    uint64 guid = 6;
    Vector init_euler_angles = 13;
    uint32 target_lock_point_index = 11;
    repeated uint32 target_lock_point_index_list = 1920;
    Vector init_pos = 4;
    uint32 owner_entity_id = 9;
    uint32 room_id = 7;
    bool is_peer_id_from_player = 25;
    uint32 prop_owner_entity_id = 1;
    bool is_true_life_time_by_owner = 379;
    uint32 config_id = 14;
}

message EvtDestroyGadgetNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 321;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    ForwardType forward_type = 5;
    uint32 entity_id = 3;
}

message EvtFaceToEntityNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 303;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 face_entity_id = 5;
    ForwardType forward_type = 9;
    uint32 entity_id = 1;
}

message EvtFaceToDirInfo {
    uint32 entity_id = 12;
    Vector face_dir = 14;
}

message EvtFaceToDirNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 390;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    ForwardType forward_type = 13;
    EvtFaceToDirInfo evt_face_to_dir_info = 5;
}

message EvtCostStaminaNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 373;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 skill_id = 6;
    float cost_stamina = 11;
}

message EvtSetAttackTargetInfo {
    uint32 entity_id = 11;
    uint32 select_point_index = 6;
    uint32 attack_target_id = 7;
}

message EvtSetAttackTargetNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 399;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    ForwardType forward_type = 1;
    EvtSetAttackTargetInfo evt_set_attack_target_info = 11;
}

message EvtAnimatorStateChangedInfo {
    int32 face_angle_compact = 14;
    uint32 to_state_hash = 5;
    uint32 normalized_time_compact = 9;
    uint32 layer = 2;
    Vector pos = 13;
    float fade_duration = 3;
    bool forceSync = 1;
    uint32 entity_id = 15;
    bool handle_animator_state_immediately = 7;
}

message EvtCompensatePosDiffInfo {
    Vector cur_pos = 14;
    uint32 entity_id = 11;
    int32 face_angle_compact = 10;
    uint32 cur_hash = 4;
    uint32 normalized_time_compact = 3;
}

message EvtMonsterDoBlink {
    Vector target_rot = 3;
    Vector target_pos = 7;
    uint32 entity_id = 2;
}

message EvtFixedRushMove {
    uint32 entity_id = 15;
    float speed = 3;
    bool need_set_is_in_air = 7;
    repeated uint32 animator_state_id_list = 2;
    Vector target_pos = 9;
    bool check_animator_state_on_exit_only = 6;
    string override_collider = 13;
}

message EvtSyncTransform {
    uint32 entity_id = 15;
    Vector entity_pos = 6;
    Vector entity_rot = 1;
}

message EvtLightCoreMove {
    Vector target_pos = 15;
    float acelerate = 11;
    uint32 entity_id = 5;
    float max_absorb_time = 10;
    float speed = 14;
}

message EvtGrapplingHookMove {
    float acceleration = 1;
    repeated uint32 animator_state_id_list = 2;
    uint32 entity_id = 3;
    bool need_set_is_in_air = 13;
    float speed = 12;
    float max_speed = 8;
    bool check_animator_state_on_exit_only = 11;
    string override_collider = 14;
    Vector target_pos = 10;
}

message EvtAnimatorStateChangedNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 331;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    ForwardType forward_type = 3;
    EvtAnimatorStateChangedInfo evt_animator_state_changed_info = 10;
}

message EvtRushMoveInfo {
    int32 state_name_hash = 11;
    Vector rush_to_pos = 9;
    Vector rush_attack_target_pos = 8;
    uint32 entity_id = 4;
    float timeRange = 15;
    Vector velocity = 6;
    Vector pos = 2;
    int32 face_angle_compact = 10;
}

message EvtMotionInfoDuringSteerAttack {
    Vector face_dir = 4;
    Vector velocity = 3;
    Vector pos = 1;
    uint32 entity_id = 6;
}

message EvtCombatSteerMotionInfo {
    Vector pos = 12;
    Vector velocity = 10;
    uint32 entity_id = 4;
    Vector face_dir = 1;
}

message EvtCombatForceSetPosInfo {
    uint32 ice_id = 9;
    uint32 collider_entity_id = 10;
    uint32 entity_id = 6;
    Vector target_pos = 1;
}

message EvtSyncEntityPositionInfo {
    uint32 entity_id = 10;
    uint32 normalized_time_compact = 13;
    uint32 state_hash = 8;
    int32 face_angle_compact = 7;
    Vector pos = 15;
}

message EvtRushMoveNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 375;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    ForwardType forward_type = 1;
    EvtRushMoveInfo evt_rush_move_info = 15;
}

message EvtBulletHitNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 348;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 single_bullet_id = 8;
    Vector hit_point = 15;
    Vector hit_normal = 11;
    int32 hit_box_index = 9;
    uint32 hit_entity_id = 3;
    uint32 entity_id = 5;
    uint32 forward_peer = 7;
    ForwardType forward_type = 2;
    HitColliderType hit_collider_type = 6;
}

message EvtBulletDeactiveNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 397;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    ForwardType forward_type = 6;
    uint32 entity_id = 9;
    Vector disappear_pos = 4;
}

message EvtEntityStartDieEndNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 381;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    bool immediately = 15;
    uint32 die_state_flag = 12;
    uint32 entity_id = 8;
    ForwardType forward_type = 11;
}

message EvtBulletMoveNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 365;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    ForwardType forward_type = 14;
    Vector cur_pos = 1;
    uint32 entity_id = 11;
}

message EvtAvatarEnterFocusNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 304;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 entity_id = 1;
    bool can_move = 10;
    bool enter_holding_focus_shoot = 13;
    bool disable_aim_layer = 6;
    bool use_auto_focus = 5;
    bool fast_focus = 3;
    bool show_cross_hair = 12;
    bool enter_normal_focus_shoot = 14;
    ForwardType forward_type = 8;
    Vector focus_forward = 7;
    bool disable_anim = 9;
    bool use_focus_sticky = 15;
    bool use_gyro = 11;
}

message EvtAvatarExitFocusNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 393;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    Vector finish_forward = 12;
    ForwardType forward_type = 11;
    uint32 entity_id = 14;
}

message EvtAvatarUpdateFocusNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 327;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    ForwardType forward_type = 7;
    Vector focus_forward = 11;
    uint32 entity_id = 10;
}

message AuthorityChange {
    EntityAuthorityInfo entity_authority_info = 5;
    uint32 authority_peer_id = 3;
    uint32 entity_id = 13;
}

message EntityAuthorityChangeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 394;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated AuthorityChange authority_change_list = 15;
}

message AvatarBuffAddNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 388;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 avatar_guid = 10;
    uint32 buff_id = 6;
}

message AvatarBuffDelNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 326;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 avatar_guid = 10;
    uint32 buff_id = 12;
}

message MonsterAlertChangeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 363;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 avatar_entity_id = 15;
    repeated uint32 monster_entity_list = 5;
    uint32 is_alert = 13;
}

message MonsterForceAlertNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 395;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 monster_entity_id = 13;
}

message AvatarEnterElementViewNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 334;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    bool is_triggerd = 3;
    uint32 avatar_entity_id = 12;
}

message TriggerCreateGadgetToEquipPartNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 350;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 gadget_id = 1;
    uint32 entity_id = 13;
    string equip_part = 14;
    uint32 gadget_entity_id = 10;
}

message EvtEntityRenderersChangedNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 343;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    ForwardType forward_type = 8;
    bool is_server_cache = 3;
    EntityRendererChangedInfo renderer_changed_info = 5;
    uint32 entity_id = 15;
}

message AnimatorForceSetAirMoveNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 374;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 entity_id = 14;
    bool in_air_move = 13;
    ForwardType forward_type = 9;
}

message AiSkillCdInfo {
    map<uint32, uint32> skill_cd_map = 11;
    map<uint32, uint32> skill_group_cd_map = 6;
}

message EvtAiSyncSkillCdNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 376;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    map<uint32, AiSkillCdInfo> ai_cd_map = 7;
}

message EvtBeingHitsCombineNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 346;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    ForwardType forward_type = 11;
    repeated EvtBeingHitInfo evt_being_hit_info_list = 7;
}

message EvtAvatarSitDownNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 324;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    Vector position = 9;
    uint32 entity_id = 4;
    uint64 chair_id = 6;
}

message EvtAvatarStandUpNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 356;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 chair_id = 11;
    int32 performID = 6;
    int32 direction = 1;
    uint32 entity_id = 9;
}

message CreateMassiveEntityReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 342;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated ClientMassiveEntity massive_entity_list = 1;
}

message CreateMassiveEntityRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 330;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 1;
}

message CreateMassiveEntityNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 367;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated ServerMassiveEntity massive_entity_list = 15;
}

message DestroyMassiveEntityNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 358;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated ClientMassiveEntity massive_entity_list = 7;
}

message MassiveEntityStateChangedNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 370;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated MassiveEntityState massive_entity_state_list = 4;
}

message TeamEntityInfo {
    uint32 authority_peer_id = 10;
    AbilitySyncStateInfo team_ability_info = 9;
    uint32 team_entity_id = 8;
}

message SyncTeamEntityNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 317;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 scene_id = 13;
    repeated TeamEntityInfo team_entity_info_list = 15;
}

message DelTeamEntityNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 302;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated uint32 del_entity_id_list = 15;
    uint32 scene_id = 8;
}

message EvtSyncSkillAnchorPosition {
    uint32 entity_id = 2;
    Vector skill_anchor_position = 13;
}

message CombatInvokeEntry {
    bytes combat_data = 12;
    ForwardType forward_type = 10;
    CombatTypeArgument argument_type = 11;
}

message CombatInvocationsNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 319;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated CombatInvokeEntry invoke_list = 14;
}

message ServerBuffChangeNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 361;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    enum ServerBuffChangeType {
        ADD_SERVER_BUFF = 0;
        DEL_SERVER_BUFF = 1;
    }

    ServerBuffChangeType server_buff_change_type = 7;
    bool is_creature_buff = 10;
    repeated uint32 entity_id_list = 1;
    repeated uint64 avatar_guid_list = 12;
    repeated ServerBuff server_buff_list = 11;
}

message AiThreatInfo {
    map<uint32, uint32> ai_threat_map = 11;
}

message EvtAiSyncCombatThreatInfoNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 329;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    map<uint32, AiThreatInfo> combat_threat_info_map = 8;
}

message MassiveEntityElementOpBatchNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 357;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    int32 entity_type = 6;
    uint32 op_idx = 9;
    uint32 user_id = 11;
    uint32 attacker_id = 3;
    int32 source_element_type = 12;
    int32 reaction_source_type = 4;
    float attack_element_durability = 7;
    oneof check_shape {
        ShapeSphere shape_sphere = 10;
        ShapeBox shape_box = 2;
    }
}

message AiSyncInfo {
    uint32 entity_id = 9;
    bool is_self_killing = 8;
    bool has_path_to_target = 4;
}

message EntityAiSyncNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 400;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    repeated uint32 local_avatar_alerted_monster_list = 15;
    repeated AiSyncInfo info_list = 1;
}

message LuaSetOptionNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 316;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    enum LuaOptionType {
        LUA_OPTION_NONE = 0;
        LUA_OPTION_PLAYER_INPUT = 1;
    }

    string lua_set_param = 8;
    LuaOptionType option_type = 10;
}

message EvtDestroyServerGadgetNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 387;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 entity_id = 7;
}

message EntityAiKillSelfNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 340;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 entity_id = 12;
}

message EvtAvatarLockChairReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 318;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint64 chair_id = 5;
    Vector position = 8;
}

message EvtAvatarLockChairRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 366;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint64 chair_id = 14;
    uint32 entity_id = 15;
    Vector position = 4;
    int32 retcode = 12;
}

message ReportFightAntiCheatNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 368;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 cheat_count = 8;
    uint32 cheat_type = 12;
}

message EvtBeingHealedNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 333;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 target_id = 1;
    float real_heal_amount = 5;
    uint32 source_id = 13;
    float heal_amount = 4;
}

message EvtLocalGadgetOwnerLeaveSceneNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 384;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 entity_id = 10;
}
